--- a/saac-frontend.html
+++ b/saac-frontend.html
@@ -25,7 +25,7 @@
 		<!-- Header -->
 		<header id="header">
 			<h1>Sistema de Gestión de Clientes</h1>
-			<p>Desarrollo Frontend | Angular | Aplicación Web</p>
+			<p>Frontend | Angular | Diseño Responsivo | Aplicación Web</p>
 		</header>
 
 		<!-- Main -->
@@ -79,8 +79,8 @@
 					<img class="responsive-image" src="images/saac/home.webp" alt="home">
 				</div>
 				<div class="image-gallery">
-					<img src="images/saac/menu.webp" alt="login" class="responsive-image">
-					<img class="responsive-image" src="images/saac/message.webp" alt="home">
+					<img src="images/saac/menu.webp" alt="menu" class="responsive-image">
+					<img class="responsive-image" src="images/saac/message.webp" alt="message">
 				</div>
 
 				<h2>Desafíos y soluciones</h2>
