the image gallery styles have been modified

--- a/saac-frontend.html
+++ b/saac-frontend.html
@@ -72,16 +72,29 @@
 						la entidad y sus empleados pudieran hacer uso del mismo</li>
 				</ul>
 
-				<h2>Vista previa del proyecto</h2>
-				<p>A continuación, se muestran algunas capturas de pantalla de la interfaz del sistema:</p>
-				<div class="image-gallery">
-					<img src="images/saac/login.webp" alt="login" class="responsive-image">
-					<img class="responsive-image" src="images/saac/home.webp" alt="home">
-				</div>
-				<div class="image-gallery">
-					<img src="images/saac/menu.webp" alt="menu" class="responsive-image">
-					<img class="responsive-image" src="images/saac/message.webp" alt="message">
-				</div>
+				<h2>Galería</h2>
+				<section id="gallery">
+					<div class="image-gallery-2">
+						<div class="gallery-item">
+							<img src="images/saac/login.webp" alt="login" class="responsive-image">
+							<p>Login del sistema</p>
+						</div>
+						<div class="gallery-item">
+							<img class="responsive-image" src="images/saac/home.webp" alt="home">
+							<p>Página de inicio</p>
+						</div>
+					</div>
+					<div class="image-gallery-2">
+						<div class="gallery-item">
+							<img src="images/saac/menu.webp" alt="menu" class="responsive-image">
+							<p>Vista de menú abierto</p>
+						</div>
+						<div class="gallery-item">
+							<img class="responsive-image" src="images/saac/message.webp" alt="message">
+							<p>Mensajes de validación</p>
+						</div>
+					</div>
+				</section>
 
 				<h2>Desafíos y soluciones</h2>
 				<p>Durante el desarrollo, me encontré con algunos desafíos interesantes:</p>
