--- a/on-store.html
+++ b/on-store.html
@@ -12,6 +12,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet" href="assets/css/sav.css">
+	<link rel="stylesheet" href="assets/css/fade-in.css">
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
@@ -23,7 +24,7 @@
 	<div id="wrapper">
 
 		<!-- Header -->
-		<header id="header">
+		<header id="header" class="text-animation">
 			<h1>On Store</h1>
 			<p>Diseño UX/UI | Adobe XD | Prototipo | Aplicación Móvil</p>
 		</header>
@@ -33,8 +34,8 @@
 
 			<!-- Content -->
 			<section id="content" class="main">
-				<span class="image main"><img src="images/onstore/icon.svg" alt="sistema de gestión de clientes"
-						height="500" /></span>
+				<span class="image main"><img src="images/onstore/icon.svg"
+						alt="Prototipo de Diseño Aplicación de Pedidos en Línea" height="500" /></span>
 
 				<h2>Descripción</h2>
 				<p>Un prototipo interactivo diseñado para optimizar el proceso de pedidos en linea, permitiendo una
@@ -78,31 +79,35 @@
 				<section id="gallery">
 					<div class="image-gallery-2">
 						<div class="gallery-item">
-							<img src="images/onstore/home.webp" alt="home" class="responsive-image">
+							<img src="images/onstore/home.webp" alt="Pantalla Principal de la Aplicaión"
+								class="responsive-image">
 							<p>Pantalla de inicio</p>
 						</div>
 						<div class="gallery-item">
-							<img class="responsive-image" src="images/onstore/details.webp" alt="product-details">
+							<img class="responsive-image" src="images/onstore/details.webp"
+								alt="Pantalla de Detalles Sobre el Producto">
 							<p>Detalles de producto</p>
 						</div>
 						<div class="gallery-item">
-							<img class="responsive-image" src="images/onstore/added-cart.webp" alt="added-to-cart">
+							<img class="responsive-image" src="images/onstore/added-cart.webp"
+								alt="Mensaje de Producto Agregado al Carrito">
 							<p>Agregado al carrito</p>
 						</div>
 						<div class="gallery-item">
-							<img src="images/onstore/new-address.webp" alt="add-new-address">
+							<img src="images/onstore/new-address.webp" alt="Pantalla para Agregar Nueva Dirección">
 							<p>Agregar nueva dirección</p>
 						</div>
 						<div class="gallery-item">
-							<img src="images/onstore/new-card.webp" alt="add-method-pay">
+							<img src="images/onstore/new-card.webp" alt="Pantalla para Agregar Nueva Tarjeta de Pago">
 							<p>Agregar nueva tarjeta</p>
 						</div>
 						<div class="gallery-item">
-							<img src="images/onstore/payment.webp" alt="payment-and-address-selection">
+							<img src="images/onstore/payment.webp"
+								alt="Pantalla de Selección de Dirección y Método de Pago">
 							<p>Selección de método de pago y dirección</p>
 						</div>
 						<div class="gallery-item">
-							<img src="images/onstore/purchase-confirmed.webp" alt="add-method-pay">
+							<img src="images/onstore/purchase-confirmed.webp" alt="Mensaje de Confirmación de Pedido">
 							<p>Pedido realizado</p>
 						</div>
 					</div>
