--- a/saac-frontend.html
+++ b/saac-frontend.html
@@ -12,6 +12,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet" href="assets/css/sav.css">
+	<link rel="stylesheet" href="assets/css/fade-in.css">
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
@@ -23,7 +24,7 @@
 	<div id="wrapper">
 
 		<!-- Header -->
-		<header id="header">
+		<header id="header" class="text-animation">
 			<h1>Sistema de Gestión de Clientes</h1>
 			<p>Frontend | Angular | Diseño Responsivo | Aplicación Web</p>
 		</header>
@@ -33,8 +34,8 @@
 
 			<!-- Content -->
 			<section id="content" class="main">
-				<span class="image main"><img src="images/saac/devices.svg" alt="sistema de gestión de clientes"
-						height="500" /></span>
+				<span class="image main"><img src="images/saac/devices.svg"
+						alt="Vista del Sistema de Gectión de Clientes en Diferentes Dispositivos" height="500" /></span>
 
 				<h2>Objetivo</h2>
 				<p>El objetivo es desarrollar las interfaces del sistema, para permitir la interacción y manipulación de
@@ -76,21 +77,22 @@
 				<section id="gallery">
 					<div class="image-gallery-2">
 						<div class="gallery-item">
-							<img src="images/saac/login.webp" alt="login" class="responsive-image">
+							<img src="images/saac/login.webp" alt="Login del Sistema" class="responsive-image">
 							<p>Login del sistema</p>
 						</div>
 						<div class="gallery-item">
-							<img class="responsive-image" src="images/saac/home.webp" alt="home">
+							<img class="responsive-image" src="images/saac/home.webp" alt="Pantalla de Inicio">
 							<p>Página de inicio</p>
 						</div>
 					</div>
 					<div class="image-gallery-2">
 						<div class="gallery-item">
-							<img src="images/saac/menu.webp" alt="menu" class="responsive-image">
+							<img src="images/saac/menu.webp" alt="Vista del Menú Abierto" class="responsive-image">
 							<p>Vista de menú abierto</p>
 						</div>
 						<div class="gallery-item">
-							<img class="responsive-image" src="images/saac/message.webp" alt="message">
+							<img class="responsive-image" src="images/saac/message.webp"
+								alt="Mensaje de Alerta Mostrado">
 							<p>Mensajes de validación</p>
 						</div>
 					</div>
