these files being moved to another location

--- a/pages/blog-interactivo.html
+++ b/pages/blog-interactivo.html
@@ -10,11 +10,11 @@
 	<title>Proyecto - Samoel Andres</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="stylesheet" href="assets/css/sav.css">
-	<link rel="stylesheet" href="assets/css/fade-in.css">
+	<link rel="stylesheet" href="../assets/css/main.css" />
+	<link rel="stylesheet" href="../assets/css/sav.css">
+	<link rel="stylesheet" href="../assets/css/fade-in.css">
 	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
+		<link rel="stylesheet" href="../assets/css/noscript.css" />
 	</noscript>
 </head>
 
@@ -34,7 +34,7 @@
 
 			<!-- Content -->
 			<section id="content" class="main">
-				<span class="image main"><img src="images/blog/devices.svg"
+				<span class="image main"><img src="../images/blog/devices.svg"
 						alt="Vista del Blog Interactivo en Dispositivos" height="500" /></span>
 
 				<h2>Objetivo</h2>
@@ -81,22 +81,23 @@
 				<section id="gallery">
 					<div class="image-gallery-2">
 						<div class="gallery-item">
-							<img src="images/blog/login.webp" alt="Login del Blog Interactivo" class="responsive-image">
+							<img src="../images/blog/login.webp" alt="Login del Blog Interactivo"
+								class="responsive-image">
 							<p>Login de la plataforma</p>
 						</div>
 						<div class="gallery-item">
-							<img class="responsive-image" src="images/blog/home.webp" alt="Pantalla de inicio">
+							<img class="responsive-image" src="../images/blog/home.webp" alt="Pantalla de inicio">
 							<p>Pantalla principal</p>
 						</div>
 					</div>
 					<div class="image-gallery-2">
 						<div class="gallery-item">
-							<img src="images/blog/profile.webp" alt="Página de Edición de Perfil de Usuario"
+							<img src="../images/blog/profile.webp" alt="Página de Edición de Perfil de Usuario"
 								class="responsive-image">
 							<p>Editar perfil de usuario</p>
 						</div>
 						<div class="gallery-item">
-							<img class="responsive-image" src="images/blog/admin.webp"
+							<img class="responsive-image" src="../images/blog/admin.webp"
 								alt="Vista del Panel de Administrador">
 							<p>Tablero de administración</p>
 						</div>
@@ -168,19 +169,19 @@
 					<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 				</ul>
 			</section>
-			<p class="copyright">&copy; Desarrollado por Samoel Andres</p>
+			<p class="copyright">Template by <a href="https://html5up.net">HTML5 UP</a>. Modified by Samoel Andres.</p>
 		</footer>
 
 	</div>
 
 	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+	<script src="../assets/js/jquery.min.js"></script>
+	<script src="../assets/js/jquery.scrollex.min.js"></script>
+	<script src="../assets/js/jquery.scrolly.min.js"></script>
+	<script src="../assets/js/browser.min.js"></script>
+	<script src="../assets/js/breakpoints.min.js"></script>
+	<script src="../assets/js/util.js"></script>
+	<script src="../assets/js/main.js"></script>
 
 </body>
 
