--- a/pages/ice-cream.html
+++ b/pages/ice-cream.html
@@ -10,11 +10,11 @@
 	<title>Proyecto - Samoel Andres</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="stylesheet" href="assets/css/sav.css">
-	<link rel="stylesheet" href="assets/css/fade-in.css">
+	<link rel="stylesheet" href="../assets/css/main.css" />
+	<link rel="stylesheet" href="../assets/css/sav.css">
+	<link rel="stylesheet" href="../assets/css/fade-in.css">
 	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
+		<link rel="stylesheet" href="../assets/css/noscript.css" />
 	</noscript>
 </head>
 
@@ -34,7 +34,7 @@
 
 			<!-- Content -->
 			<section id="content" class="main">
-				<span class="image main"><img src="images/icecream/preview.svg" alt="Prototipo de Rediseño ICE Cream"
+				<span class="image main"><img src="../images/icecream/preview.svg" alt="Prototipo de Rediseño ICE Cream"
 						height="500" /></span>
 
 				<h2>Descripción</h2>
@@ -80,24 +80,24 @@
 				<section id="gallery">
 					<div class="image-gallery-2">
 						<div class="gallery-item">
-							<img src="images/icecream/home.webp" alt="Vista Principal de la Página Web"
+							<img src="../images/icecream/home.webp" alt="Vista Principal de la Página Web"
 								class="responsive-image">
 							<p>Vista principal de la página web</p>
 						</div>
 						<div class="gallery-item">
-							<img src="images/icecream/promotions.webp" alt="Vista de las Promociones del Comercio"
+							<img src="../images/icecream/promotions.webp" alt="Vista de las Promociones del Comercio"
 								class="responsive-image">
 							<p>Sección de promociones</p>
 						</div>
 					</div>
 					<div class="image-gallery-2">
 						<div class="gallery-item">
-							<img src="images/icecream/contact.webp" alt="Sección Contacto" class="responsive-image">
+							<img src="../images/icecream/contact.webp" alt="Sección Contacto" class="responsive-image">
 							<p>Sección de contacto</p>
 						</div>
 						<div class="gallery-item">
-							<img src="images/icecream/store-cart.webp" alt="Sección Productos y Productos en el Carrito"
-								class="responsive-image">
+							<img src="../images/icecream/store-cart.webp"
+								alt="Sección Productos y Productos en el Carrito" class="responsive-image">
 							<p>Sección de Productos y Productos que se Pedirán</p>
 						</div>
 					</div>
@@ -136,24 +136,24 @@
 				<section id="gallery">
 					<div class="image-gallery-2">
 						<div class="gallery-item">
-							<img src="images/icecream/w-home.webp" alt="Nueva Vista Principal de la Página Web"
+							<img src="../images/icecream/w-home.webp" alt="Nueva Vista Principal de la Página Web"
 								class="responsive-image">
 							<p>Nueva vista principal de la página web</p>
 						</div>
 						<div class="gallery-item">
-							<img src="images/icecream/w-store.webp" alt="Nueva Vista de la Tienda de Productos"
+							<img src="../images/icecream/w-store.webp" alt="Nueva Vista de la Tienda de Productos"
 								class="responsive-image">
 							<p>Nueva vista de la tienda de productos</p>
 						</div>
 					</div>
 					<div class="image-gallery-2">
 						<div class="gallery-item">
-							<img src="images/icecream/w-menu.webp" alt="Nueva Vista del Submenú de Productos"
+							<img src="../images/icecream/w-menu.webp" alt="Nueva Vista del Submenú de Productos"
 								class="responsive-image">
 							<p>Nueva vista del submenú de productos</p>
 						</div>
 						<div class="gallery-item">
-							<img src="images/icecream/w-cart.webp" alt="Nueva Vista Previa del Carrito de Productos"
+							<img src="../images/icecream/w-cart.webp" alt="Nueva Vista Previa del Carrito de Productos"
 								class="responsive-image">
 							<p>Nueva vista previa del carrito de productos</p>
 						</div>
@@ -175,48 +175,48 @@
 				<section id="gallery">
 					<div class="image-gallery-2">
 						<div class="gallery-item">
-							<img src="images/icecream/before-now/before-home.webp"
+							<img src="../images/icecream/before-now/before-home.webp"
 								alt="Anterior Vista Principal de la Página" class="responsive-image">
 							<p>Anterior vista principal de la página</p>
 						</div>
 						<div class="gallery-item">
-							<img src="images/icecream/before-now/now-home.webp" alt="Nueva Vista Principal de la Página"
-								class="responsive-image">
+							<img src="../images/icecream/before-now/now-home.webp"
+								alt="Nueva Vista Principal de la Página" class="responsive-image">
 							<p>Nueva vista principal de la página</p>
 						</div>
 					</div>
 					<div class="image-gallery-2">
 						<div class="gallery-item">
-							<img src="images/icecream/before-now/before-submenu.webp" alt="Anterior Vista del Submenú"
-								class="responsive-image">
+							<img src="../images/icecream/before-now/before-submenu.webp"
+								alt="Anterior Vista del Submenú" class="responsive-image">
 							<p>Anterior vista del submenú</p>
 						</div>
 						<div class="gallery-item">
-							<img src="images/icecream/before-now/now-submenu.webp" alt="Nueva Vista del Submenú"
+							<img src="../images/icecream/before-now/now-submenu.webp" alt="Nueva Vista del Submenú"
 								class="responsive-image">
 							<p>Nueva vista del submenú</p>
 						</div>
 					</div>
 					<div class="image-gallery-2">
 						<div class="gallery-item">
-							<img src="images/icecream/before-now/before-store.webp" alt="Anterior Vista de la Tienda"
+							<img src="../images/icecream/before-now/before-store.webp" alt="Anterior Vista de la Tienda"
 								class="responsive-image">
 							<p>Anterior vista de la tienda</p>
 						</div>
 						<div class="gallery-item">
-							<img src="images/icecream/before-now/now-store.webp" alt="Nueva Vista de la Tienda"
+							<img src="../images/icecream/before-now/now-store.webp" alt="Nueva Vista de la Tienda"
 								class="responsive-image">
 							<p>Nueva vista de la tienda</p>
 						</div>
 					</div>
 					<div class="image-gallery-2">
 						<div class="gallery-item">
-							<img src="images/icecream/before-now/before-cart.webp"
+							<img src="../images/icecream/before-now/before-cart.webp"
 								alt="Anterior Vista Previa del Carrito" class="responsive-image">
 							<p>Anterior vista previa del carrito</p>
 						</div>
 						<div class="gallery-item">
-							<img src="images/icecream/before-now/now-cart.webp" alt="Nueva Vista Previa del Carrito"
+							<img src="../images/icecream/before-now/now-cart.webp" alt="Nueva Vista Previa del Carrito"
 								class="responsive-image">
 							<p>Nueva vista previa del carrito</p>
 						</div>
@@ -297,19 +297,19 @@
 					<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 				</ul>
 			</section>
-			<p class="copyright">&copy; Desarrollado por Samoel Andres</p>
+			<p class="copyright">Template by <a href="https://html5up.net">HTML5 UP</a>. Modified by Samoel Andres.</p>
 		</footer>
 
 	</div>
 
 	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+	<script src="../assets/js/jquery.min.js"></script>
+	<script src="../assets/js/jquery.scrollex.min.js"></script>
+	<script src="../assets/js/jquery.scrolly.min.js"></script>
+	<script src="../assets/js/browser.min.js"></script>
+	<script src="../assets/js/breakpoints.min.js"></script>
+	<script src="../assets/js/util.js"></script>
+	<script src="../assets/js/main.js"></script>
 
 </body>
 
