--- a/pages/my-portfolio.html
+++ b/pages/my-portfolio.html
@@ -10,11 +10,11 @@
 	<title>Proyecto - Samoel Andres</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="stylesheet" href="assets/css/sav.css">
-	<link rel="stylesheet" href="assets/css/fade-in.css">
+	<link rel="stylesheet" href="../assets/css/main.css" />
+	<link rel="stylesheet" href="../assets/css/sav.css">
+	<link rel="stylesheet" href="../assets/css/fade-in.css">
 	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
+		<link rel="stylesheet" href="../assets/css/noscript.css" />
 	</noscript>
 </head>
 
@@ -34,7 +34,7 @@
 
 			<!-- Content -->
 			<section id="content" class="main">
-				<span class="image main"><img src="images/portfolio/devices.svg"
+				<span class="image main"><img src="../images/portfolio/devices.svg"
 						alt="Vista de mi Portafolio en Diferentes Dispositivos" height="500" /></span>
 
 				<h2>Propósito</h2>
@@ -72,23 +72,24 @@
 				<section id="gallery">
 					<div class="image-gallery-2">
 						<div class="gallery-item">
-							<img src="images/portfolio/inicio.webp" alt="Página de Inicio" class="responsive-image">
+							<img src="../images/portfolio/inicio.webp" alt="Página de Inicio" class="responsive-image">
 							<p>Página de de inicio</p>
 						</div>
 						<div class="gallery-item">
-							<img class="responsive-image" src="images/portfolio/about.webp"
+							<img class="responsive-image" src="../images/portfolio/about.webp"
 								alt="Página de Información Sobre Mi">
 							<p>Acerca de mi</p>
 						</div>
 					</div>
 					<div class="image-gallery-2">
 						<div class="gallery-item">
-							<img src="images/portfolio/projects.webp" alt="Página de mis Proyectos"
+							<img src="../images/portfolio/projects.webp" alt="Página de mis Proyectos"
 								class="responsive-image">
 							<p>Mis lista de proyectos</p>
 						</div>
 						<div class="gallery-item">
-							<img class="responsive-image" src="images/portfolio/contact.webp" alt="Página de Contacto">
+							<img class="responsive-image" src="../images/portfolio/contact.webp"
+								alt="Página de Contacto">
 							<p>Página de contacto</p>
 						</div>
 					</div>
@@ -154,19 +155,19 @@
 					<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 				</ul>
 			</section>
-			<p class="copyright">&copy; Desarrollado por Samoel Andres</p>
+			<p class="copyright">Template by <a href="https://html5up.net">HTML5 UP</a>. Modified by Samoel Andres.</p>
 		</footer>
 
 	</div>
 
 	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+	<script src="../assets/js/jquery.min.js"></script>
+	<script src="../assets/js/jquery.scrollex.min.js"></script>
+	<script src="../assets/js/jquery.scrolly.min.js"></script>
+	<script src="../assets/js/browser.min.js"></script>
+	<script src="../assets/js/breakpoints.min.js"></script>
+	<script src="../assets/js/util.js"></script>
+	<script src="../assets/js/main.js"></script>
 
 </body>
 
