--- a/pages/on-store.html
+++ b/pages/on-store.html
@@ -10,11 +10,11 @@
 	<title>Proyecto - Samoel Andres</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="stylesheet" href="assets/css/sav.css">
-	<link rel="stylesheet" href="assets/css/fade-in.css">
+	<link rel="stylesheet" href="../assets/css/main.css" />
+	<link rel="stylesheet" href="../assets/css/sav.css">
+	<link rel="stylesheet" href="../assets/css/fade-in.css">
 	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
+		<link rel="stylesheet" href="../assets/css/noscript.css" />
 	</noscript>
 </head>
 
@@ -34,7 +34,7 @@
 
 			<!-- Content -->
 			<section id="content" class="main">
-				<span class="image main"><img src="images/onstore/icon.svg"
+				<span class="image main"><img src="../images/onstore/icon.svg"
 						alt="Prototipo de Diseño Aplicación de Pedidos en Línea" height="500" /></span>
 
 				<h2>Descripción</h2>
@@ -79,35 +79,37 @@
 				<section id="gallery">
 					<div class="image-gallery-2">
 						<div class="gallery-item">
-							<img src="images/onstore/home.webp" alt="Pantalla Principal de la Aplicaión"
+							<img src="../images/onstore/home.webp" alt="Pantalla Principal de la Aplicaión"
 								class="responsive-image">
 							<p>Pantalla de inicio</p>
 						</div>
 						<div class="gallery-item">
-							<img class="responsive-image" src="images/onstore/details.webp"
+							<img class="responsive-image" src="../images/onstore/details.webp"
 								alt="Pantalla de Detalles Sobre el Producto">
 							<p>Detalles de producto</p>
 						</div>
 						<div class="gallery-item">
-							<img class="responsive-image" src="images/onstore/added-cart.webp"
+							<img class="responsive-image" src="../images/onstore/added-cart.webp"
 								alt="Mensaje de Producto Agregado al Carrito">
 							<p>Agregado al carrito</p>
 						</div>
 						<div class="gallery-item">
-							<img src="images/onstore/new-address.webp" alt="Pantalla para Agregar Nueva Dirección">
+							<img src="../images/onstore/new-address.webp" alt="Pantalla para Agregar Nueva Dirección">
 							<p>Agregar nueva dirección</p>
 						</div>
 						<div class="gallery-item">
-							<img src="images/onstore/new-card.webp" alt="Pantalla para Agregar Nueva Tarjeta de Pago">
+							<img src="../images/onstore/new-card.webp"
+								alt="Pantalla para Agregar Nueva Tarjeta de Pago">
 							<p>Agregar nueva tarjeta</p>
 						</div>
 						<div class="gallery-item">
-							<img src="images/onstore/payment.webp"
+							<img src="../images/onstore/payment.webp"
 								alt="Pantalla de Selección de Dirección y Método de Pago">
 							<p>Selección de método de pago y dirección</p>
 						</div>
 						<div class="gallery-item">
-							<img src="images/onstore/purchase-confirmed.webp" alt="Mensaje de Confirmación de Pedido">
+							<img src="../images/onstore/purchase-confirmed.webp"
+								alt="Mensaje de Confirmación de Pedido">
 							<p>Pedido realizado</p>
 						</div>
 					</div>
@@ -182,19 +184,19 @@
 					<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 				</ul>
 			</section>
-			<p class="copyright">&copy; Desarrollado por Samoel Andres</p>
+			<p class="copyright">Template by <a href="https://html5up.net">HTML5 UP</a>. Modified by Samoel Andres.</p>
 		</footer>
 
 	</div>
 
 	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+	<script src="../assets/js/jquery.min.js"></script>
+	<script src="../assets/js/jquery.scrollex.min.js"></script>
+	<script src="../assets/js/jquery.scrolly.min.js"></script>
+	<script src="../assets/js/browser.min.js"></script>
+	<script src="../assets/js/breakpoints.min.js"></script>
+	<script src="../assets/js/util.js"></script>
+	<script src="../assets/js/main.js"></script>
 
 </body>
 
