--- a/pages/saac-api.html
+++ b/pages/saac-api.html
@@ -10,11 +10,11 @@
 	<title>Proyecto - Samoel Andres</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="stylesheet" href="assets/css/sav.css">
-	<link rel="stylesheet" href="assets/css/fade-in.css">
+	<link rel="stylesheet" href="../assets/css/main.css" />
+	<link rel="stylesheet" href="../assets/css/sav.css">
+	<link rel="stylesheet" href="../assets/css/fade-in.css">
 	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
+		<link rel="stylesheet" href="../assets/css/noscript.css" />
 	</noscript>
 </head>
 
@@ -35,7 +35,7 @@
 			<!-- Content -->
 			<section id="content" class="main">
 				<span class="image main">
-					<img src="images/apisaac/api.svg" alt="Imagen Referente a una API" height="500" />
+					<img src="../images/apisaac/api.svg" alt="Imagen Referente a una API" height="500" />
 				</span>
 
 				<h2>¿Qué es la API de Gestión de Clientes?</h2>
@@ -66,7 +66,7 @@
 				<p>A continuación se muestra un diagrama que ilustra cómo se estructuran y distribuyen las rutas dentro
 					de la API:</p>
 				<div class="diagram-container">
-					<img src="images/apisaac/diagram.webp" alt="Diagrama de Rutas de la API">
+					<img src="../images/apisaac/diagram.webp" alt="Diagrama de Rutas de la API">
 				</div>
 
 				<h2>Endpoints principales</h2>
@@ -182,19 +182,19 @@
 					<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 				</ul>
 			</section>
-			<p class="copyright">&copy; Desarrollado por Samoel Andres</p>
+			<p class="copyright">Template by <a href="https://html5up.net">HTML5 UP</a>. Modified by Samoel Andres.</p>
 		</footer>
 
 	</div>
 
 	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+	<script src="../assets/js/jquery.min.js"></script>
+	<script src="../assets/js/jquery.scrollex.min.js"></script>
+	<script src="../assets/js/jquery.scrolly.min.js"></script>
+	<script src="../assets/js/browser.min.js"></script>
+	<script src="../assets/js/breakpoints.min.js"></script>
+	<script src="../assets/js/util.js"></script>
+	<script src="../assets/js/main.js"></script>
 
 </body>
 
