--- a/pages/saac-frontend.html
+++ b/pages/saac-frontend.html
@@ -10,11 +10,11 @@
 	<title>Proyecto - Samoel Andres</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="stylesheet" href="assets/css/sav.css">
-	<link rel="stylesheet" href="assets/css/fade-in.css">
+	<link rel="stylesheet" href="../assets/css/main.css" />
+	<link rel="stylesheet" href="../assets/css/sav.css">
+	<link rel="stylesheet" href="../assets/css/fade-in.css">
 	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
+		<link rel="stylesheet" href="../assets/css/noscript.css" />
 	</noscript>
 </head>
 
@@ -34,7 +34,7 @@
 
 			<!-- Content -->
 			<section id="content" class="main">
-				<span class="image main"><img src="images/saac/devices.svg"
+				<span class="image main"><img src="../images/saac/devices.svg"
 						alt="Vista del Sistema de Gectión de Clientes en Diferentes Dispositivos" height="500" /></span>
 
 				<h2>Objetivo</h2>
@@ -77,21 +77,21 @@
 				<section id="gallery">
 					<div class="image-gallery-2">
 						<div class="gallery-item">
-							<img src="images/saac/login.webp" alt="Login del Sistema" class="responsive-image">
+							<img src="../images/saac/login.webp" alt="Login del Sistema" class="responsive-image">
 							<p>Login del sistema</p>
 						</div>
 						<div class="gallery-item">
-							<img class="responsive-image" src="images/saac/home.webp" alt="Pantalla de Inicio">
+							<img class="responsive-image" src="../images/saac/home.webp" alt="Pantalla de Inicio">
 							<p>Página de inicio</p>
 						</div>
 					</div>
 					<div class="image-gallery-2">
 						<div class="gallery-item">
-							<img src="images/saac/menu.webp" alt="Vista del Menú Abierto" class="responsive-image">
+							<img src="../images/saac/menu.webp" alt="Vista del Menú Abierto" class="responsive-image">
 							<p>Vista de menú abierto</p>
 						</div>
 						<div class="gallery-item">
-							<img class="responsive-image" src="images/saac/message.webp"
+							<img class="responsive-image" src="../images/saac/message.webp"
 								alt="Mensaje de Alerta Mostrado">
 							<p>Mensajes de validación</p>
 						</div>
@@ -167,19 +167,19 @@
 					<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 				</ul>
 			</section>
-			<p class="copyright">&copy; Desarrollado por Samoel Andres</p>
+			<p class="copyright">Template by <a href="https://html5up.net">HTML5 UP</a>. Modified by Samoel Andres.</p>
 		</footer>
 
 	</div>
 
 	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+	<script src="../assets/js/jquery.min.js"></script>
+	<script src="../assets/js/jquery.scrollex.min.js"></script>
+	<script src="../assets/js/jquery.scrolly.min.js"></script>
+	<script src="../assets/js/browser.min.js"></script>
+	<script src="../assets/js/breakpoints.min.js"></script>
+	<script src="../assets/js/util.js"></script>
+	<script src="../assets/js/main.js"></script>
 
 </body>
 
